<resources>
    <string name="app_name">Learn English</string>

    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_group">Create group</string>
    <string name="profesor">Professor</string>
    <string name="group">Group </string>
    <string name="group_name">Group name</string>
    <string name="initial_letter">Initial letter</string>
    <string name="create">Create</string>
    <string name="student">Student</string>
    <string name="title_activity_slides_exam">SlidesExam</string>
    <string name="sign_up">sign up</string>
    <string name="name">Name</string>
    <string name="last_name">Lastname</string>
    <string name="done">Done</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="role">
        <item>Professor</item>
        <item>Student</item>
    </string-array>
</resources>
