<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ingerikahumada.aprendiendoingles.SignUp">

    <LinearLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/icon_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name_sign_up"
            android:hint="@string/name"
            android:textColorHint="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextStyle"/>

        <EditText
            android:id="@+id/lastname_sign_up"
            android:hint="@string/last_name"
            android:textColorHint="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextStyle"/>
        <EditText
            android:id="@+id/email_sign_up"
            android:hint="@string/email"
            android:textColorHint="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextStyle"/>

        <EditText
            android:id="@+id/password_sign_up"
            android:hint="@string/password"
            android:textColorHint="@color/primary"
            android:textColor="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:theme="@style/MyEditTextStyle"/>
        <Spinner
            android:id="@+id/role_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">



        <Button
            android:id="@+id/button_sign_up_done"
            android:text="@string/done"
            android:textColor="@color/icons"
            android:background="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>
