<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ingerikahumada.aprendiendoingles.CreateGroup">

    <LinearLayout
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/avatar_professor"
            android:layout_margin="5dp"
            android:background="@drawable/user_view_circle"
            android:src="@drawable/group_tree"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <TextView
            android:text="@string/group"
            android:textColor="@color/icons"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_empty_state"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <EditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/group_name"
                android:textColorHint="@color/primary"
                android:textColor="@color/primary"
                android:theme="@style/MyEditTextStyle"/>
            <EditText
                android:id="@+id/initial_letter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/initial_letter"
                android:textColorHint="@color/primary"
                android:textColor="@color/primary"
                android:theme="@style/MyEditTextStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_create"
            android:text="@string/create"
            android:background="@color/primary"
            android:textColor="@color/icons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

    </LinearLayout>

</LinearLayout>
